# Deployment-of-ai-projects

./: .env.docker  .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Makefile  README.md  README_DEPLOY.md  TASK.md  audit-report.json  comment-friends-projects-spec.md  docker-compose.prod.yml  docker-compose.yml  ecosystem.config.cjs  ecosystem.config.js  eslint.config.mjs  fix-db.js  middleware.ts  netlify.toml  next.config.ts  package-lock.json  package.json  proxy.ts  pyproject.toml  render.yaml  siteConfig.ts  start-backend.sh  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  routes-manifest.json  trace  trace-build
app/: error.tsx  global-error.tsx  globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx  robots.ts  sitemap.ts
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  railway.json  requirements.txt
chatters/: hello.md
components/: AnnouncementBanner.tsx  AnnouncementPopup.tsx  BackButton.tsx  BackgroundEffects.tsx  BackgroundSlider.tsx  ClickEffect.tsx  ClientSocials.tsx  ClientTOC.tsx  CloudPlayer.tsx  Comments.tsx  CurtainReveal.tsx  CyberCat.tsx  DanmakuBackground.tsx  EmptyState.tsx  ErrorState.tsx  Fireflies.tsx  FloatingPlayer.tsx  GlobalSnow.tsx  GlobalToolbox.tsx  LabComments.tsx  LatestChatterCarousel.tsx  LatestPostsCarousel.tsx  LoadingState.tsx  LyricBar.tsx  MobileBackButton.tsx  MomentComments.tsx  MusicProvider.tsx  Navbar.tsx  ProfileCard.tsx  (+18 more)
(+1631 files in other folders)
